--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,11 @@
 ---
+rust_use_rustup: true
+rust_rustup_toolchains:
+  - "stable"
+rust_rustup_default_toolchain: "{{ rust_rustup_toolchains[0] }}"
+rust_rustup_update: false
 
+rust_packages: "{{ _rust_packages }}"
+
+rust_rustup_user: "{{ ansible_user_id }}"
 ...
