--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,8 +2,8 @@ galaxy_info:
   author: diademiemi
   namespace: diademiemi
   company: diademiemi
-  description: Ansible role to install and configure template
-  role_name: template
+  description: Ansible role to install and configure rust
+  role_name: rust
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -18,7 +18,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: MIT
 
-  min_ansible_version: "2.10"
+  min_ansible_version: "2.11"
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -28,6 +28,7 @@ galaxy_info:
   # If you don't wish to enumerate all versions for a particular platform, use 'all'.
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
+  #
 
   platforms:
     - name: "EL"
@@ -45,6 +46,9 @@ galaxy_info:
       versions:
         - buster
         - bullseye
+    - name: opensuse
+      versions:
+        - "15.4"
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
